--- a/src/content/blog/一些创作.mdx
+++ b/src/content/blog/一些创作.mdx
@@ -7,7 +7,7 @@ tags:
   - 创作
 badge: 将我平时写的内容整理到这里
 categories:
-  - 生活
+  - life
 
 ---
 import Collapse from "../../components/blog/collapse.astro";
